# soloclaw

./: Cargo.toml  README.md  todo.txt
docs/plans/: 2026-02-16-dynamic-prompt-design.md  2026-02-16-dynamic-prompt-plan.md  2026-02-16-simpleclaw-design.md  2026-02-16-simpleclaw-implementation.md  2026-02-16-soloclaw-design.md  2026-02-16-soloclaw-implementation.md  2026-02-16-system-prompt-design.md  2026-02-16-system-prompt-implementation.md  2026-02-19-boba-migration-design.md  2026-02-19-boba-migration-plan.md
src/: app.rs  config.rs  lib.rs  main.rs  prompt.rs
src/agent/: compaction.rs  loop.rs  mod.rs  provider.rs
src/approval/: allowlist.rs  analysis.rs  engine.rs  mod.rs  policy.rs  types.rs
src/prompts/: agents.md  soul.md  tools.md
src/session/: log.rs  mod.rs  persistence.rs
src/tools/: ask_user.rs  mod.rs
src/tui/: input.rs  mod.rs  model.rs  state.rs  subscriptions.rs  ui.rs
src/tui/widgets/: approval.rs  chat.rs  mod.rs  question.rs  status.rs
tests/: approval_integration.rs  prompt_integration.rs  tui_rendering.rs
