[package]
name = "soloclaw"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "claw"
path = "src/main.rs"

[dependencies]
mux = { path = "../mux-rs" }
ratatui = { version = "0.30", features = ["unstable-rendered-line-info"] }
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
dirs = "5"
anyhow = "1"
dotenvy = "0.15"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
unicode-width = "0.2"
boba = { path = "../archive/boba/crates/boba" }
tokio-stream = "0.1"

[dev-dependencies]
tempfile = "3"
